# txrm2tiff

./: .gitignore  LICENSE  README.md  __init__.py  dragndrop.bat  mypy.ini  pyproject.toml  pytest.ini  setup.py  stable-requirements.txt  txrm2tiff.py
.github/workflows/: python-package.yml
conda/: meta.yaml
src/: file_sorting.py  logger.py  run.py  txrm2image.py  txrm_wrapper.py
src/omexml/: omexml.py
src/txrm2tiff/: __init__.py  __main__.py  annotator.py  argparse_entrypoint.py  file_sorting.py  info.py  inspector.py  logger.py  main.py  run.py  shortcut_creator.py  txrm_to_image.py  txrm_wrapper.py
src/txrm2tiff/scripts/: commandline.py
src/txrm2tiff/txrm/: __init__.py  abstract.py  annot_mixin.py  annotator.py  main.py  meta_mixin.py  ref_mixin.py  save_mixin.py  txrm_property.py  v3.py  v5.py  wrappers.py
src/txrm2tiff/txrm/abc/: base.py  file.py  images.py  metadata.py  ome.py
src/txrm2tiff/txrm/mixins/: annotation.py  base.py  file.py  images.py  metadata.py  ome.py  reference.py  save.py  shifts.py
src/txrm2tiff/txrm_functions/: __init__.py  general.py  images.py
src/txrm2tiff/utils/: exceptions.py  file_handler.py  functions.py  image_processing.py  logging.py  metadata.py  shortcut_creation.py
src/txrm2tiff/xradia_properties/: __init__.py  enums.py  stream_dtypes.py
test/: test_commandline_entrypoint.py  test_file_sorting.py  test_run.py  test_txrm2image.py  test_txrm_to_image.py  test_txrm_wrapper.py
tests/: __init__.py  test_abstract_txrm.py  test_annotator.py  test_commandline_entrypoint.py  test_file_handler.py  test_file_sorting.py  test_image_processing.py  test_inspector.py  test_main.py  test_metadata.py  test_referencer.py  test_run.py  test_saver.py  test_setup_fuctions.py  test_shifts.py  test_txrm_functions.py  test_txrm_property.py  test_txrm_to_image.py  test_txrm_v5.py  test_txrm_wrapper.py  test_txrmv3.py  test_util_functions.py  test_with_files.py
tests/mixins/: test_abstract_txrm.py  test_annotator_mixin.py  test_metadata_mixin.py  test_referencer_mixin.py  test_saver_mixin.py
