[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "txrm2tiff"
description = "A converter for Zeiss txrm and xrm files, created by & for B24 of Diamond Light Source"
authors=[{name="Thomas Fish", email="thomas.fish@diamond.ac.uk"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dynamic = ["version", "readme"]
dependencies = [
    "tifffile>=2020.9.30",
    "numpy>=1.20",
    "omexml-dls>=1.1.0",
    "olefile>=0.46",
    "scipy>=1.3.3",
    "pillow>=5.3",
    "pywin32;platform_system=='Windows'",
]

[tool.setuptools.dynamic]
version = {attr = "txrm2tiff.info.__version__"}
readme = {file = "README.md", content-type="text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]
exclude=["scripts", "tests"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE", "license.txt"]

[tool.setuptools.package-data]
txrm2tiff = ["font/CallingCode-Regular.otf"]

[project.scripts]
txrm2tiff = "txrm2tiff.__main__:main"

[project.optional-dependencies]
test = [
    "pytest-cov ~=3.0.0",
    "Parameterized"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test"]
python_functions = ["test_"]
addopts = "--cov=src/txrm2tiff --cov-report=term --cov-report=xml"

[tool.coverage.report]
show_missing = true
fail_under = 90
